--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
                         <a href="https://www.facebook.com/MinesSaintEtienne?fref=ts">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                                <i class="fa fa-fb-social fa-stack-1x fa-inverse"></i>
                             </span>
                         </a>
                     </li>
