(almost) Full completion of the site

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,11 @@
                 <div class="site-heading">
                     <h1>{{ site.title }}</h1>
                     <hr class="small">
+                    {% if page.subheader %}
+                    <span class="subheading">{{ page.subheader }}</span>
+                    {% else %}
                     <span class="subheading">The website all ISMIN must use !</span>
+                    {% endif %}
                 </div>
             </div>
         </div>
