--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,6 +3,10 @@ layout: default
 ---
 <div class="post">
 
+  {% if page.logo %}
+  <img class="img-thumbnail" src="{{site.baseurl}}{{page.logo}}" style="max-width: 150px;"/>
+  {% endif %}
+
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
