fix(design): header shadows

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,8 @@
         font-size: 20px;
         -webkit-transition: all 500ms;
         transition: 500ms;
-        text-shadow: 2px 2px 0px black;
+        text-shadow: 0px 0px 5px black;
+        color: white !important;
     }
 
     .nav>li>a{
@@ -17,10 +18,10 @@
     }
 }
 
-.page-heading>h1{
-    text-shadow: 2px 2px 0px black;
+.site-heading>h1{
+    text-shadow: 0px 0px 10px black;
 }
 
-.page-heading>span{
-    text-shadow: 1px 1px 0px black;
+.site-heading>span{
+    text-shadow: 0px 0px 10px black;
 }
