fix(design): center image - remove border
Centrer les logos des assos + retirer leur bordure
Ajout du logo pour le gala

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 <div class="post">
 
   {% if page.logo %}
-  <img class="img-thumbnail" src="{{site.baseurl}}{{page.logo}}" style="max-width: 150px;"/>
+  <img class="img-responsive center-block" src="{{site.baseurl}}{{page.logo}}" style="max-width: 150px;"/>
   {% endif %}
 
   <header class="post-header">
