feat(nav): no more visite guidée & services

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,7 +20,7 @@
                 <li>
                     <a href="{{ site.baseurl }}formation/">La formation</a>
                 </li>
-                <li class="dropdown">
+                <!--<li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Visite guidée <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
                         <li><a href="{{ site.baseurl }}visite-ecole/">L'école</a></li>
@@ -33,7 +33,7 @@
                         <li><a href="{{ site.baseurl }}covoiturage/">Covoiturage</a></li>
                         <li><a href="{{ site.baseurl }}courses/">Livraison de courses</a></li>
                     </ul>
-                </li>
+                    </li>-->
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Associations <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
