--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,6 +17,16 @@
                 <li>
                     <a href="{{ site.baseurl }}">Accueil</a>
                 </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Plannings <span class="caret"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                        <li><a href="http://ismin.emse.fr/ismin/AffichePlanningMois.php?cycle=ismea&annee=1A">1A</a></li>
+                        <li><a href="http://ismin.emse.fr/ismin/AffichePlanningMois.php?cycle=ismea&annee=2A">2A</a></li>
+                        <li><a href="http://ismin.emse.fr/ismin/AffichePlanningMois.php?cycle=ismea&annee=3A">3A</a></li>
+                        <li><a href="http://ismin.emse.fr/ismin/AffichePlanningMois.php?cycle=ismea&annee=3A&option=M_S">3A M&S</a></li>
+                        <li><a href="http://ismin.emse.fr/ismin/AffichePlanningMois.php?cycle=ismea&annee=3A&option=ITS">3A ITS</a></li>
+                    </ul>
+                </li>
                 <li>
                     <a href="{{ site.baseurl }}formation/">La formation</a>
                 </li>
