--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -60,6 +60,18 @@
                         {% endfor %}
                     </ul>
                 </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Liens <span class="caret"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                        <li><a href="http://ismin.emse.fr/ismin/">Scolamines</a></li>
+                        <li><a href="http://portail.emse.fr/">Portail</a></li>
+                        <li><a href="https://cloud-sgc.emse.fr:5001/webman/index.cgi">Cloud</a></li>
+                        <li><a href="http://services-numeriques.emse.fr/documentation/assistance">Wiki DSI</a></li>
+                        <li class="divider"></li>
+                        <li><a href="http://joiesisminiennes.tumblr.com/">JoiesIsminiennes</a></li>
+                        <li><a href="http://photos-ismin.tumblr.com/">Tumblr</a></li>
+                    </ul>
+                </li>
                 <!--<li>
                     <a href="connect.php">Se connecter</a>
                 </li>-->
