feat(calendar): adds a calendar

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,3 +26,7 @@
 <!-- Custom Theme JavaScript -->
 <script src="{{ relative }}js/clean-blog.min.js"></script>
 
+<script src="{{ relative }}js/moment.min.js"></script>
+
+<script src="{{ relative }}js/fullcalendar.min.js"></script>
+<script src="{{ relative }}js/fullcalendar.fr.js"></script>
