--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,7 @@
     <link href="{{relative}}css/main.css" rel="stylesheet">
     <link href="{{relative}}css/clean-blog.css" rel="stylesheet">
     <link href="{{relative}}css/style.css" rel="stylesheet">
+    <link href="{{relative}}css/fullcalendar.min.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
